misc/iptables-zdv
# Generated by iptables-save v1.6.0 on Tue Oct  4 06:24:49 2016
*nat
:PREROUTING ACCEPT [7615:382136]
:INPUT ACCEPT [136:23740]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Tue Oct  4 06:24:49 2016
# Generated by iptables-save v1.6.0 on Tue Oct  4 06:24:49 2016
*filter
:INPUT DROP [76:12083]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [174:24232]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -s SRC_IP/32 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s SRC_IP/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s SRC_IP/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10022 -j ACCEPT
COMMIT
# Completed on Tue Oct  4 06:24:49 2016
